# arm_avoidance

fuzz_arm/: CMakeLists.txt  config.txt  config_tmp.txt  package.xml  temp_robot.urdf  test_udp_control.py  test_udp_sync.py
fuzz_arm/src/: CMakeLists.txt  inspect_gng_data.cpp  offline_gng_main2.cpp  offline_gng_main3.cpp  offline_gng_main4_env.cpp  offline_gng_main5_clean.cpp  offline_gng_main6_island_pruning.cpp  offline_gng_main_integrated.cpp  offline_gng_spatial_analyzer.cpp  offline_gng_status_updater.cpp  offline_urdf_trainer.cpp  offline_vlut_builder.cpp
fuzz_arm/src/collision/: CMakeLists.txt  aabb_tree.cpp  aabb_tree.hpp  broad_phase_grid.cpp  broad_phase_grid.hpp  collision_detector.cpp  collision_detector.hpp  composite_collision_checker.hpp  environment_collision_checker.cpp  environment_collision_checker.hpp  geometric_self_collision_checker.cpp  geometric_self_collision_checker.hpp  iself_collision_checker.hpp  point_cloud_collision_checker.cpp  point_cloud_collision_checker.hpp  self_collision_checker.cpp  self_collision_checker.hpp
fuzz_arm/src/collision/fcl/: fcl_collision_detector.cpp  fcl_collision_detector.hpp
fuzz_arm/src/collision/ode/: ode_robot_collision_model.cpp  ode_robot_collision_model.hpp
fuzz_arm/src/common/: CMakeLists.txt  config_manager.cpp  config_manager.hpp  geometry_utils.cpp  geometry_utils.hpp  gng_parameters.hpp  gng_status.hpp  node_status.hpp  resource_utils.hpp  trajectory.hpp
fuzz_arm/src/control/: CMakeLists.txt  control_interface.hpp  gng_data_adapter.hpp  jacobian_controller.hpp  linear_trajectory_controller.hpp  robot_interface.hpp  trajectory_controller.hpp  trajectory_safety_manager.cpp  trajectory_safety_manager.hpp
fuzz_arm/src/description/: CMakeLists.txt  robot_arm_parameters.hpp  robot_dynamics.hpp
fuzz_arm/src/experiment/: CMakeLists.txt  experiment_config.cpp  experiment_config.hpp  experiment_runner.hpp  experiment_settings.hpp  gng_planner_wrapper.hpp  i_planner.hpp  i_scenario.hpp  rrt_planner_wrapper.hpp  scenario_definition.cpp  scenario_definition.hpp  target_touch_scenario.hpp
fuzz_arm/src/experiment/scenarios/: trajectory_tracking_scenario.cpp  trajectory_tracking_scenario.hpp
fuzz_arm/src/gng/: CMakeLists.txt  GrowingNeuralGas_offline.cpp  GrowingNeuralGas_offline.hpp  GrowingNeuralGas_online.cpp  GrowingNeuralGas_online.hpp
fuzz_arm/src/hardware/: CMakeLists.txt  USAGE.md  coordinate_system.hpp  data_utils.hpp  receptor_node_engine.hpp  twin_manager.cpp  twin_manager.hpp  udp.md  udp_comm.hpp  udp_controller_main.cpp
fuzz_arm/src/hardware/python_com/: com.md  recieve.py  send.py
fuzz_arm/src/kinematics/: CMakeLists.txt  joint.hpp  kinematic_chain.cpp  kinematic_chain.hpp  kinematics.hpp  state_adapter.hpp  utility.hpp
fuzz_arm/src/planner/: CMakeLists.txt  chomp.hpp  chomp_params.hpp  stomp.hpp  stomp_params.hpp
fuzz_arm/src/planner/RRT/: ik_rrt_planner.hpp  rrt_connect.hpp  rrt_connect_planner.hpp  rrt_params.hpp  state_validity_checker.hpp  voxel_validity_checker.hpp
fuzz_arm/src/planning/: advanced_costs.hpp  cost_evaluator.hpp  gng_dijkstra_planner.hpp  joint_distance_cost.hpp  joint_linf_cost.hpp  path_planner.hpp  workspace_distance_cost.hpp
fuzz_arm/src/simulation/: CMakeLists.txt  online_integration_main.cpp  reactive_controller.cpp  reactive_controller.hpp
fuzz_arm/src/simulation/core/: experiment_logger.cpp  experiment_logger.hpp  replay_manager.hpp  simulation_app.cpp  simulation_app.hpp  simulation_infra.hpp  simulation_state.cpp  simulation_state.hpp  udp_command_bridge.cpp  udp_command_bridge.hpp
fuzz_arm/src/simulation/planning/: experiment_controller.cpp  experiment_controller.hpp  ode_state_validity_checker.cpp  ode_state_validity_checker.hpp  planning_coordinator.cpp  planning_coordinator.hpp  scenario_manager.cpp  scenario_manager.hpp  simulation_planning.hpp
fuzz_arm/src/simulation/robot/: geometry_management.cpp  geometry_management.hpp  kinematic_adapter.cpp  kinematic_adapter.hpp  robot_behavior.hpp  robot_collision_model.cpp  robot_collision_model.hpp  robot_model.hpp  simulation_robot.hpp  stl_loader.cpp  stl_loader.hpp  urdf_loader.cpp  urdf_loader.hpp
fuzz_arm/src/simulation/robot/ode/: ode_collision_manager.cpp  ode_collision_manager.hpp  ode_gng_visualizer.cpp  ode_gng_visualizer.hpp  ode_helpers.hpp  ode_robot_builder.cpp  ode_robot_builder.hpp  ode_robot_sim.cpp  ode_robot_sim.hpp
fuzz_arm/src/simulation/safety/: gng_geometric_self_collision_provider.hpp  gng_self_collision_provider.hpp  gng_status_providers.hpp  influence_management.cpp  influence_management.hpp  risk_aware_cost_evaluator.hpp  safety_management.cpp  safety_management.hpp  simulation_safety.hpp
fuzz_arm/src/simulation/sensing/: robot_point_cloud_sampler.cpp  robot_point_cloud_sampler.hpp  simulation_sensing.hpp  voxel_grid.hpp
fuzz_arm/src/simulation/viz/: gng_visualization_interface.hpp  gui_manager.cpp  gui_manager.hpp  simulation_viz.hpp  visualization_manager.cpp  visualization_manager.hpp
fuzz_arm/src/simulation/world/: collision_exclusion_setup.hpp  dynamic_obstacle_manager.hpp  environment_manager.cpp  environment_manager.hpp  sim_obstacle_controller.cpp  sim_obstacle_controller.hpp  simulation_world.hpp
fuzz_arm/src/spatial/: CMakeLists.txt  boundary_node_classifier.hpp  centroid_shift_surface_classifier.hpp  dense_spatial_index.hpp  index_voxel_grid.hpp  ispatial_index.hpp  node_classifier.hpp  occupancy_grid_surface_classifier.hpp  robot_arm_collision_analyzer.cpp  robot_model_analyzer.cpp  robot_model_analyzer.hpp  sparse_spatial_index.hpp  spatial_network_loader.hpp  surface_node_classifier.hpp  voxel_wireframe_generator.hpp
fuzz_arm/src/status/: CMakeLists.txt  dynamic_manipulability.cpp  dynamic_manipulability.hpp  gng_status_updater.hpp  graph_topology_analyzer.hpp  manipulability.cpp  manipulability.hpp
fuzz_arm/src/visualization/: CMakeLists.txt  color.hpp  color_scheme.hpp  joint_angle_publisher.cpp  joint_angle_publisher.hpp  node_attributes.hpp  voxel_wireframe_generator.cpp
