<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gng_planner</name>
  <version>0.1.0</version>
  <description>GNG based real-time motion planning system for manipulators</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>urdf</depend>
  <depend>urdfdom</depend>
  <depend>tinyxml2_vendor</depend>
  <depend>fcl</depend>
  <depend>eigen</depend>
  <depend>opencv</depend>
  <depend>cv_bridge</depend>
  <depend>ament_index_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
