add_subdirectory(common)
add_subdirectory(kinematics)
add_subdirectory(description)
add_subdirectory(hardware)
add_subdirectory(gng)
add_subdirectory(collision)
add_subdirectory(status)
add_subdirectory(spatial)
add_subdirectory(visualization)
add_subdirectory(planner)
add_subdirectory(control)
add_subdirectory(experiment)
add_subdirectory(simulation)
